<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/ic_launcher_background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    android:src="@drawable/ic_launcher_foreground" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:letterSpacing="0.15"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:justificationMode="inter_word"
                android:text="@string/background_story"
                android:textColor="@color/text_color_secondary"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/whats_good"
                android:textAlignment="center" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/intuitive_design"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rectangle_colorful" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:text="@string/intuitive_design_desc"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="15sp" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/effortless_registration"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rectangle_colorful" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/effortless_registration_desc"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="15sp" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/automatic_alerts"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rectangle_colorful" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/automatic_alerts_desc"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="15sp" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/meet_the_developer"
                android:textAlignment="center" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/img_drdisagree" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dev_name"
                android:textAlignment="center"
                android:textColor="@color/text_color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dev_bio"
                android:textAlignment="center"
                android:textColor="@color/text_color_secondary"
                android:textSize="15sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_github"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/github"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/header"
        layout="@layout/view_header_expandable" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>