<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="36dp"
            android:paddingBottom="40dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/ic_launcher_background" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    android:src="@drawable/ic_launcher_foreground" />

            </FrameLayout>

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.TitleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:text="@string/sign_up"
                android:textColor="@color/text_color_primary"
                android:textSize="32sp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:text="@string/create_your_account"
                android:textColor="@color/text_color_primary"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_full_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:animateLayoutChanges="true"
                app:boxCornerRadiusBottomEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/component_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/component_corner_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_name_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:animateLayoutChanges="true"
                app:boxCornerRadiusBottomEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/component_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/component_corner_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_email_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:animateLayoutChanges="true"
                app:boxCornerRadiusBottomEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/component_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/component_corner_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_call_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:animateLayoutChanges="true"
                app:boxCornerRadiusBottomEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/component_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/component_corner_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword|textNoSuggestions"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_confirm_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:animateLayoutChanges="true"
                app:boxCornerRadiusBottomEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/component_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/component_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/component_corner_radius"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_password_small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword|textNoSuggestions"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:minHeight="@dimen/button_height"
                android:text="@string/btn_register"
                android:textSize="16sp"
                app:cornerRadius="@dimen/component_corner_radius" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="4dp"
                    android:text="@string/already_have_account"
                    android:textColor="@color/text_color_secondary"
                    android:textSize="15sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/btn_login"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>